--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ docs/temp
 docs/node_modules
 docs/source/04_user_guide/source/.ipynb
 tests/template/fake_project/
+tests/runner/data/
 
 default.profraw
 package-lock.json
