--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,11 +43,12 @@ keywords = [
 ]
 license = {text = "Apache Software License (Apache 2.0)"}
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 dynamic = ["readme", "version"]
 
