--- a/kedro/templates/project/{{ cookiecutter.repo_name }}/pyproject.toml
+++ b/kedro/templates/project/{{ cookiecutter.repo_name }}/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
 docs = [
     "docutils<0.21",
     "sphinx>=5.3,<7.3",
-     "sphinx_rtd_theme==2.0.0",
+    "sphinx_rtd_theme==2.0.0",
     "nbsphinx==0.8.1",
     "sphinx-autodoc-typehints==1.20.2",
     "sphinx_copybutton==0.5.2",
@@ -35,7 +35,7 @@ dev = [
     "pytest-cov~=3.0",
     "pytest-mock>=1.7.1, <2.0",
     "pytest~=7.2",
-    "ruff~=0.1.8"
+    "ruff~=0.12.0"
 ]
 
 [tool.setuptools.dynamic]
@@ -69,6 +69,8 @@ docstring-code-format = true
 [tool.ruff]
 line-length = 88
 show-fixes = true
+
+[tool.ruff.lint]
 select = [
     "F",   # Pyflakes
     "W",   # pycodestyle
