Quick pass, docs review (#4953)
* Move DVC page to Integrations

Signed-off-by: Juan Luis Cano Rodríguez <juan_luis_cano@mckinsey.com>

* Remove link to missing page

Signed-off-by: Juan Luis Cano Rodríguez <juan_luis_cano@mckinsey.com>

* Update starter suggestion

Signed-off-by: Juan Luis Cano Rodríguez <juan_luis_cano@mckinsey.com>

* Fix broken link

Signed-off-by: Juan Luis Cano Rodríguez <juan_luis_cano@mckinsey.com>

---------

Signed-off-by: Juan Luis Cano Rodríguez <juan_luis_cano@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -154,11 +154,9 @@ nav:
           - Kedro data catalog: catalog-data/data_catalog.md
           - Data Catalog YAML examples: catalog-data/data_catalog_yaml_examples.md
           - Dataset factories: catalog-data/kedro_dataset_factories.md
-          - Data and pipeline versioning: catalog-data/kedro_dvc_versioning.md
           - Partitioned and incremental datasets: catalog-data/partitioned_and_incremental_datasets.md
           - Programmatic usage: catalog-data/advanced_data_catalog_usage.md
           - Lazy loading: catalog-data/lazy_loading.md
-          - Deprecated API: catalog-data/deprecated_api.md
           - Test phase: catalog-data/test_phase.md
       - Build:
           - Nodes: build/nodes.md
@@ -265,7 +263,7 @@ nav:
               - How to add Kedro to Jupyter Notebook: integrations-and-plugins/notebooks_and_ipython/notebook-example/add_kedro_to_a_notebook.md
           - PySpark: integrations-and-plugins/pyspark_integration.md
           - MLflow: integrations-and-plugins/mlflow.md
-        #   - DVC: integrations-and-plugins/dvc.md
+          - DVC: integrations-and-plugins/dvc.md
           - Delta Lake: integrations-and-plugins/deltalake_versioning.md
           - Iceberg: integrations-and-plugins/iceberg_versioning.md
       - IDE Support:
