--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "fsspec>=2021.4",
     "gitpython>=3.0",
     "importlib-metadata>=3.6,<9.0",  # This can be removed when we drop 3.9 support
+    "importlib_resources>=1.3,<7.0",  # This can be removed when we drop 3.9 support
     "kedro-telemetry>=0.5.0",
     "more_itertools>=8.14.0",
     "omegaconf>=2.1.1",
