Try token for CI
Signed-off-by: Ankita Katiyar <ankitakatiyar2401@gmail.com>

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,6 +10,10 @@ on:
       branch:
         type: string
         default: ''
+
+env:
+  GITHUB_TOKEN: ${{ secrets.GH_TAGGING_TOKEN }}
+
 jobs:
   unit-tests:
     runs-on: ${{ inputs.os }}
