Loosen pin for pytest-cov
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/kedro/templates/project/{{ cookiecutter.repo_name }}/pyproject.toml
+++ b/kedro/templates/project/{{ cookiecutter.repo_name }}/pyproject.toml
@@ -32,7 +32,7 @@ docs = [
     "myst-parser>=1.0,<2.1"
 ]
 dev = [
-    "pytest-cov~=3.0",
+    "pytest-cov>=3,<7",
     "pytest-mock>=1.7.1, <2.0",
     "pytest~=7.2",
     "ruff~=0.12.0"
