--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -28,7 +28,8 @@ jobs:
           activate-environment: true
       - name: Install dependencies
         run: |
-            make install-test-requirements
+            uv pip install -U .[test]
+            uv pip install pip
             make install-pre-commit
       - name: pip freeze
         run: uv pip freeze --system
