--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -31,8 +31,7 @@ jobs:
           activate-environment: true
       - name: Install dependencies
         run: |
-          uv pip install -U .[test]
-          uv pip install pip
+          make install-test-requirements
           make install-pre-commit
       - name: pip freeze
         run: pip freeze
