--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,8 +32,7 @@ jobs:
           key: ${{inputs.os}}-python-${{inputs.python-version}}
       - name: Install dependencies
         run: |
-            uv pip install -U .[test]
-            uv pip install pip
+            make install-test-requirements
             make install-pre-commit
       - name: pip freeze
         run: uv pip freeze --system
