--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -31,7 +31,7 @@ jobs:
           activate-environment: true
       - name: Install dependencies
         run: |
-          uv pip install -U .[test]
+          make install-test-requirements
           uv pip install pip
           make install-pre-commit
       - name: pip freeze
