Temporarily pin pip-tools for compile
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.github/workflows/pip-compile.yml
+++ b/.github/workflows/pip-compile.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           make install-test-requirements
           make install-pre-commit
-          uv pip install "pip-tools>=6.5"
+          uv pip install "pip-tools>=6.5,<7.5"
       - name: Run pip-compile
         run: make pip-compile
