Use `uv pip compile` instead of `pip-tools` (#5033)
* Temporarily pin pip-tools for compile

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Try use uv for pip compile instead

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

---------

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.github/workflows/pip-compile.yml
+++ b/.github/workflows/pip-compile.yml
@@ -29,6 +29,5 @@ jobs:
         run: |
           make install-test-requirements
           make install-pre-commit
-          uv pip install "pip-tools>=6.5"
-      - name: Run pip-compile
-        run: make pip-compile
+      - name: Run pip compile
+        run: uv pip compile pyproject.toml -q
