--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "pluggy>=1.0",
     "PyYAML>=4.2,<7.0",
     "rich>=12.0,<15.0",
-    "toml>=0.10.0",
+    "tomli>=1.1.0;python_version<'3.11'",  # tomllib is part of the standard library in Python 3.11+
     "typing_extensions>=4.0",
 ]
 keywords = [
@@ -66,12 +66,12 @@ test = [
     "mypy~=1.0",
     "pandas~=2.0",
     "pluggy>=1.0",
-    "pre-commit>=2.9.2, <5.0",  # The hook `mypy` requires pre-commit version 2.9.2.
+    "pre-commit>=2.9.2,<5.0",  # The hook `mypy` requires pre-commit version 2.9.2.
     "pytest-cov>=3,<7",
-    "pytest-mock>=1.7.1, <4.0",
+    "pytest-mock>=1.7.1,<4.0",
     "pytest-xdist[psutil]>=2.2.1,<3.0",
     "pytest>=7.2,<9.0",
-    "s3fs>=2021.4, <2025.8",
+    "s3fs>=2021.4,<2025.8",
     "requests_mock",
     # mypy related dependencies
     "pandas-stubs",
@@ -87,7 +87,7 @@ docs = [
     "mkdocs-mermaid2-plugin>=1.2.1",
     "mkdocs-autorefs>=1.4.1",
     "mkdocs-get-deps>=0.2.0",
-    "mkdocstrings>=0.29.1",
+    "mkdocstrings>=0.291",
     "mkdocstrings-python>=0.29.1",
     "mkdocs-click",
     "griffe"  # Required by mkdocstrings-python for API documentation generation.
