--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "PyYAML>=4.2,<7.0",
     "rich>=12.0,<15.0",
     "tomli>=1.1.0;python_version<'3.11'",  # tomllib is part of the standard library in Python 3.11+
+    "tomli-w",
     "typing_extensions>=4.0",
 ]
 keywords = [
