--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,8 +72,9 @@ test = [
     "pytest-mock>=1.7.1,<4.0",
     "pytest-xdist[psutil]>=2.2.1,<3.0",
     "pytest>=7.2,<9.0",
-    "s3fs>=2021.4,<2025.8",
     "requests_mock",
+    "s3fs>=2021.4,<2025.8",
+    "toml",  # TODO(deepyaman): Migrate `kedro-telemetry` or add `toml` to the plugin's dependencies
     # mypy related dependencies
     "pandas-stubs",
     "types-PyYAML",
