--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,7 +124,7 @@ readme = {file = "README.md", content-type = "text/markdown"}
 version = {attr = "kedro.__version__"}
 
 [tool.ruff.format]
-exclude = ["**/templates", "features/steps/test_starter"]
+exclude = ["**/templates", "features/test_starter"]
 docstring-code-format = true
 
 [tool.coverage.report]
@@ -254,4 +254,4 @@ known-first-party = ["kedro"]
 [tool.mypy]
 ignore_missing_imports = true
 disable_error_code = ['misc']
-exclude = ['^kedro/templates/', '^docs/', '^features/steps/test_starter/']
+exclude = ['^kedro/templates/', '^docs/', '^features/test_starter/']
