--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,7 +84,7 @@ plugins:
         - Extensive deployment options (Airflow, Databricks, Kubeflow, etc.)
 
         Current version: 1.0.0
-        Last updated: 2025
+        Last updated: 22/07/2025
 
       full_output: llms-full.txt
 
