Add llms.txt with mkdocs to improve LLM base query (#5030)
* Update mkdocs.yml

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

* Update mkdocs.yml

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

* lint

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

* Update pyproject.toml

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

* Update mkdocs.yml

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

* Update mkdocs.yml

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

* lint

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

* include kedroviz and kedrodatasets

* Update mkdocs.yml

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>

---------

Signed-off-by: Sajid Alam <sajid_alam@mckinsey.com>
Co-authored-by: Huong Nguyen <huong_nguyen@mckinsey.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,8 @@ docs = [
     "mkdocstrings>=0.29.1",
     "mkdocstrings-python>=0.29.1",
     "mkdocs-click",
-    "griffe"  # Required by mkdocstrings-python for API documentation generation.
+    "griffe",  # Required by mkdocstrings-python for API documentation generation.
+    "mkdocs-llmstxt" # Required to generate the llm.txt file
 ]
 jupyter = [
     "ipylab>=1.0.0",
