--- a/.github/workflows/all-checks.yml
+++ b/.github/workflows/all-checks.yml
@@ -10,6 +10,8 @@ on:
     branches:
       - main
       - develop
+      - base-0.19.15
+      - release/0.19.15
     paths-ignore:
       - "docs/**"
       - '**.md'
@@ -17,6 +19,7 @@ on:
     branches:
       - main
       - develop
+      - base-0.19.15
     paths-ignore:
       - "docs/**"
       - '**.md'
