add env to benchmark and pipeline performance and unit-tests.yml

--- a/.github/workflows/benchmark-performance.yml
+++ b/.github/workflows/benchmark-performance.yml
@@ -6,6 +6,8 @@ on:
       - main  # Run benchmarks on every commit to the main branch
   workflow_dispatch:
 
+env:
+  KEDRO_DISABLE_TELEMETRY: "true"
 
 jobs:
 
