--- a/.github/workflows/pipeline-performance-test.yml
+++ b/.github/workflows/pipeline-performance-test.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [labeled]
 
+env:
+  KEDRO_DISABLE_TELEMETRY: "true"
+
 jobs:
   performance-test:
     runs-on: ubuntu-latest
