--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dynamic = ["readme", "version"]
 
 [project.optional-dependencies]
 test = [
-    "behave==1.3.3",
+    "behave>=1.2.6,<2.0",
     "coverage[toml]",
     "detect-secrets~=1.5.0",
     "import-linter==2.4",
