--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,7 @@ plugins:
           - develop/automated_testing.md: Writing tests for Kedro projects
           - develop/linting.md: Code formatting and linting setup
           - develop/debugging.md: Debugging Kedro pipelines
+          - develop/vibe_coding_with_mcp.md: Vibe coding with MCP
 
         Deployment:
           - deploy/index.md: Deployment overview and strategies
