Add pre-commit definition for codespell
Signed-off-by: Yaroslav Halchenko <debian@onerussian.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,3 +47,9 @@ repos:
           - id: detect-secrets
             args: ['--baseline', '.secrets.baseline']
             exclude: ^features/test_starter
+
+    - repo: https://github.com/codespell-project/codespell
+      # Configuration for codespell is in .pre-commit-config.yaml
+      rev: v2.4.1
+      hooks:
+      - id: codespell
