--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,6 +13,8 @@ on:
 
 jobs:
   unit-tests:
+    permissions:
+      contents: read
     runs-on: ${{ inputs.os }}
     timeout-minutes: 56 # equal to max + 3*std over the last ~1000 successful runs
     steps:
