--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,8 @@ on:
 
 jobs:
   lint:
+    permissions:
+      contents: read
     runs-on: ${{ inputs.os }}
     steps:
       - name: Checkout code
