Kedro MCP docs update (#5107)
---------

Signed-off-by: Dmitry Sorokin <dmd40in@gmail.com>
Signed-off-by: Dmitry Sorokin <40151847+DimedS@users.noreply.github.com>
Co-authored-by: Ravi Kumar Pilla <ravi_kumar_pilla@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,7 @@ plugins:
           - develop/automated_testing.md: Writing tests for Kedro projects
           - develop/linting.md: Code formatting and linting setup
           - develop/debugging.md: Debugging Kedro pipelines
+          - develop/vibe_coding_with_mcp.md: Vibe coding with MCP
 
         Deployment:
           - deploy/index.md: Deployment overview and strategies
@@ -348,6 +349,7 @@ nav:
           - Automated testing: develop/automated_testing.md
           - Code formatting and linting: develop/linting.md
           - Debugging: develop/debugging.md
+          - Vibe coding with MCP: develop/vibe_coding_with_mcp.md
       - Deploy:
           - Overview: deploy/index.md
           - How to package your project: deploy/package_a_project.md
