Edit  the correct file
Signed-off-by: Laura Couto <laurarccouto@gmail.com>

--- a/.github/workflows/docs-only-checks.yml
+++ b/.github/workflows/docs-only-checks.yml
@@ -5,10 +5,16 @@ on:
     branches:
       - main
       - develop
+    paths:
+      - "docs/**"
+      - '**.md'
   pull_request:
     branches:
       - main
       - develop
+    paths:
+      - "docs/**"
+      - '**.md'
 
 jobs:
   lint:
