Install UV the same way we do on unit tests
Signed-off-by: Laura Couto <laurarccouto@gmail.com>

--- a/.github/workflows/docs-linkcheck.yml
+++ b/.github/workflows/docs-linkcheck.yml
@@ -30,9 +30,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install UV (fast Python installer)
-        run: |
-          pip install uv
+      - name: Install the latest version of uv with Python ${{inputs.python-version}}
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "latest"
+          python-version: ${{ inputs.python-version }}
+          activate-environment: true
 
       - name: Install docs requirements
         run: |
