--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -465,3 +465,9 @@ nav:
           - Kedro telemetry: about/telemetry.md
   - Kedro-Viz: https://docs.kedro.org/projects/kedro-viz/en/stable/
   - Kedro-Datasets: https://docs.kedro.org/projects/kedro-datasets/en/stable/
+
+not_in_nav: |
+  diagrams/
+  readme.md
+  integrations-and-plugins/marimo.md
+
