Add Lychee to github CI job
Signed-off-by: Laura Couto <laurarccouto@gmail.com>

--- a/.github/workflows/docs-linkcheck.yml
+++ b/.github/workflows/docs-linkcheck.yml
@@ -37,6 +37,10 @@ jobs:
           python-version: ${{ inputs.python-version }}
           activate-environment: true
 
+      - name: Install Lychee plugin for link checking
+        run: |
+          snap install lychee
+
       - name: Install docs requirements
         run: |
           make install-docs-requirements
