testing hook integration within kedro core

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,9 @@ test = [
     "types-cachetools",
     "types-requests",
 ]
+validation = [
+    "pydantic>=2.0,<3.0",
+]
 docs = [
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.6.11",
