--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,21 +12,19 @@ authors = [
 description = "Kedro helps you build production-ready data and analytics pipelines"
 requires-python = ">=3.10"
 dependencies = [
+    # Runtime-only dependencies (project creation tools moved to [project.optional-dependencies.create])
     "attrs>=21.3",
-    "build>=0.7.0",
     "cachetools>=4.1",
     "click>=8.2",
-    "cookiecutter>=2.1.1,<3.0",
     "dynaconf>=3.1.2,<4.0",
     "fsspec>=2021.4",
-    "gitpython>=3.0",
     "kedro-telemetry>=0.5.0",
     "more_itertools>=8.14.0",
     "omegaconf>=2.1.1",
     "parse>=1.19.0",
     "pluggy>=1.0",
     "PyYAML>=4.2,<7.0",
-    "rich>=12.0,<15.0",
+   
     "tomli>=1.1.0;python_version<'3.11'",  # tomllib is part of the standard library in Python 3.11+
     "tomli-w",
     "typing_extensions>=4.0",
@@ -96,7 +94,14 @@ jupyter = [
 benchmark = [
     "asv"
 ]
-all = [ "kedro[test,docs,jupyter,benchmark]" ]
+create = [
+    # Project creation dependencies (optional; kedro new falls back to uvx if missing)
+    "cookiecutter>=2.1.1,<3.0",
+    "gitpython>=3.0",
+    "build>=0.7.0",
+    "rich>=12.0,<15.0",
+]
+all = [ "kedro[test,docs,jupyter,benchmark,create]" ]
 
 [project.urls]
 Homepage = "https://kedro.org"
