--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,9 @@ plugins:
   - search
   - autorefs
   - mermaid2
+  - redirects:
+      redirects_maps:
+        'configuration/telemetry.md': 'about/telemetry.md'
   - mkdocstrings:
       handlers:
         python:
