Add redirect from old telemetry page to new
Signed-off-by: Ankita Katiyar <ankitakatiyar2401@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ plugins:
   - mermaid2
   - redirects:
       redirects_maps:
-        'configuration/telemetry.md': 'about/telemetry.md'
+        - 'configuration/telemetry.md': 'about/telemetry.md'
   - mkdocstrings:
       handlers:
         python:
