Add redirect from old telemetry page to new (#5217)
* Add redirect from old telemetry page to new

Signed-off-by: Ankita Katiyar <ankitakatiyar2401@gmail.com>

* Add redirect from old telemetry page to new

Signed-off-by: Ankita Katiyar <ankitakatiyar2401@gmail.com>

* Fix config

Signed-off-by: Ankita Katiyar <ankitakatiyar2401@gmail.com>

---------

Signed-off-by: Ankita Katiyar <ankitakatiyar2401@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,9 @@ plugins:
   - search
   - autorefs
   - mermaid2
+  - redirects:
+      redirect_maps:
+        'configuration/telemetry.md': 'about/telemetry.md'
   - mkdocstrings:
       handlers:
         python:
